--- a/maj/site/blueprints/pages/home.yml
+++ b/maj/site/blueprints/pages/home.yml
@@ -1,8 +1,8 @@
 title: Accueil
 
 fields:
-  introduction:
-    label: Introduction
+  résumé:
+    label: Résumé
     type: textarea
     size: medium
     required: true
