--- a/maj/site/blueprints/pages/actualites.yml
+++ b/maj/site/blueprints/pages/actualites.yml
@@ -9,10 +9,10 @@ columns:
         template: actualite
         info: "Catégorie: {{ page.catégorie }}"
         status: published
-        layout: cards
-        limit: 4
+        layout: list
+        limit: 6
         image:
-          ratio: 2/2
+          ratio: 1/1
           cover: true
       drafts:
         headline: Brouillons
