--- a/maj/site/blueprints/site.yml
+++ b/maj/site/blueprints/site.yml
@@ -1,2 +1,19 @@
-preset: pages
-unlisted: true
+sections:
+  unlisted:
+    headline: Pages publiées
+    type: pages
+    status: unlisted
+    layout: list
+    limit: 5
+  listed:
+    headline: Menu de navigation
+    type: pages
+    status: listed
+    layout: list
+    limit: 5
+  drafts:
+    headline: Brouillons
+    type: pages
+    status: drafts
+    layout: list
+    limit: 5
