--- a/maj/site/blueprints/site.yml
+++ b/maj/site/blueprints/site.yml
@@ -79,4 +79,8 @@ columns:
             label: Lien Instagram
             type: url
             required: true
+          adhesion:
+            label: Adhésion
+            type: textarea
+            size: small
             help: "Apparaîtront en pied de page."
