--- a/maj/site/blueprints/pages/service.yml
+++ b/maj/site/blueprints/pages/service.yml
@@ -1,44 +1,56 @@
 Title: Service
 
-fields:
-  resume:
-    label: Résumé
-    type: textarea
-    size: small
-    required: true
-    help: "Apparaîtra sous le nom du service."
-  horaires:
-    label: Horaires
-    type: structure
+sections:
+  infos:
+    type: fields
     fields:
-      jour:
-        label: Jour(s)
-        type: text
+      resume:
+        label: Résumé
+        type: textarea
+        size: small
         required: true
-        help: "Format: Lundi / Lundi et Mardi / Lundi au Mardi"
-      horaireDebutMatin:
-        label: Horaire ouverture matin
-        type: text
-        help: "Format: Xh"
-      horaireFinMatin:
-        label: Horaire fermeture matin
-        type: text
-        help: "Format: Xh"
-      horaireDebutAprem:
-        label: Horaire ouverture après-midi
-        type: text
-        help: "Format: Xh"
-      horaireFinAprem:
-        label: Horaire fermeture après-midi
-        type: text
-        help: "Format: Xh"
-    help: "Apparaîtra sous le résumé du service."
-  mails:
-    label: Mail(s) de contact
-    type: structure
+        help: "Apparaîtra sous le nom du service."
+      horaires:
+        label: Horaires
+        type: structure
+        fields:
+          jour:
+            label: Jour(s)
+            type: text
+            required: true
+            help: "Format: Lundi / Lundi et Mardi / Lundi au Mardi"
+          horaireDebutMatin:
+            label: Horaire ouverture matin
+            type: text
+            help: "Format: Xh"
+          horaireFinMatin:
+            label: Horaire fermeture matin
+            type: text
+            help: "Format: Xh"
+          horaireDebutAprem:
+            label: Horaire ouverture après-midi
+            type: text
+            help: "Format: Xh"
+          horaireFinAprem:
+            label: Horaire fermeture après-midi
+            type: text
+            help: "Format: Xh"
+        help: "Apparaîtra sous le résumé du service."
+      mails:
+        label: Mail(s) de contact
+        type: structure
+        fields:
+          adresse:
+            label: Adresse
+            type: email
+        required: true
+        help: "Utilisée(s) pour le formulaire de contact."
+  contenu:
+    type: fields
     fields:
-      adresse:
-        label: Adresse
-        type: email
-    required: true
-    help: "Utilisée(s) pour le formulaire de contact."
+      contenu:
+        label: Contenu
+        type: textarea
+        size: large
+        required: true
+        help: "Différencier les titres des paragraphes."
