ajout permanences partenaires + img ticker

--- a/maj/site/blueprints/pages/services.yml
+++ b/maj/site/blueprints/pages/services.yml
@@ -4,7 +4,9 @@ sections:
   published:
     headline: Pages publiées
     type: pages
-    template: service
+    templates: 
+      - service
+      - permanences-partenaires
     status: published
     layout: list
     limit: 10
